<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="google_maps_key">AIzaSyAF69JEtuW0gGF8AAuw_JFwzHzZpM5Vd_8</string>
    <string name="browser_key">AIzaSyBQJWpzay8ZtfhPaAzY4n9GUr4bSB3tOU8</string>
    <string name="facebook_app_id">1568471533458885</string>
    <string name="google_login_loading">Checking sign in state...</string>
    <string name="login_with">Sign In with</string>
    <string name="action_settings">Settings</string>
    <string name="ok_btn">OK</string>
    <string name="cancel_btn">Cancel</string>
    <string name="allow_permissions_from_settings">Allow permissions from settings</string>
    <string name="email_address">Email Address</string>
    <string name="email_">Email</string>
    <string name="password">Password</string>
    <string name="forgot_your_password">Forgot Your Password?</string>
    <string name="login">LOGIN</string>
    <string name="not_google_login">Failed to login with a google account</string>
    <string name="login_with_facebook">FACEBOOK</string>
    <string name="login_with_google">GOOGLE</string>
    <string name="sign_up_with_facebook">SIGN UP WITH FACEBOOK</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="send">SEND</string>
    <string name="font_regular">moderat_regular.ttf</string>
    <string name="font_bold">moderat_bold.ttf</string>
    <string name="register.first_name">First Name</string>
    <string name="register.last_name">Last Name</string>
    <string name="register.email_address">Email Address</string>
    <string name="or">or</string>
    <string name="radio_male">male</string>
    <string name="radio_female">female</string>
    <string name="create_password">create password</string>
    <string name="support.name">Name</string>
    <string name="support.email">Email Address</string>
    <string name="support.message">Message</string>
    <string name="congratulations">Congratulations !</string>
    <string name="you_have_successfully_registered_with_laoxi_please_confirm_your_email_address">You have successfully registered with laoxi, please confirm your email address</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="aboutus.lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s\, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries\, but also the leap into electronic typesetting\, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages\, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.\nLorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s\, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries\, but also the leap into electronic typesetting\, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages\, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.\nLorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s\, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries\, but also the leap into electronic typesetting\, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages\, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="feedback.textview_text_hi">hi</string>
    <string name="feedback.textview_text_please_give_rating">Please give your rating</string>
    <string name="feedback.textview_text_write_review_about_driver">Write your review about driver</string>
    <string name="pastride.textview_text_complete">Completed</string>
    <string name="pastride.textview_text_canceled">Canceled</string>
    <string name="pastride.textview_text_amount">$20.00</string>
    <string name="pastride.textview_text_rideid">ID : 123456789</string>
    <string name="pastride.textview_text_date">Date : </string>
    <string name="pastride.textview_text_Pickup">Pick up :</string>
    <string name="pastride.textview_text_dropoff">Drop off : </string>
    <string name="pastride.textview_text_Detail">Detail :</string>
    <string name="about_us">about laoxi</string>
    <string name="your_rides">your rides</string>
    <string name="payment">payment</string>
    <string name="jump_in">Jump in!</string>
    <string name="estimate_fare">Estimate Fare</string>
    <string name="ride_later">Ride Later</string>
    <string name="register.country_code">Country Code</string>
    <string name="register.gender">Gender</string>
    <string name="register.password">Password</string>
    <string name="register.phone">Phone</string>
    <string name="update">Update</string>
    <string name="profile">Profile</string>
    <string name="map.top_text_arrival_time">I\'m</string>
    <string name="map.top_value_arrival_time">00 mins</string>
    <string name="map.bottom_text_hi">hi</string>
    <string name="map.bottom_text_car_model">Honda accord,</string>
    <string name="receipt.text_pickup_location">pick up location</string>
    <string name="receipt.text_dropoff_location">drop off location</string>
    <string name="receipt.text_distance_time">Distance Time</string>
    <string name="receipt.text_distance_km">Distance Km</string>
    <string name="receipt.text_driver_name">Driver Name</string>
    <string name="receipt.text_car_type">Car Type</string>
    <string name="receipt.text_wanna_round_up">Wanna Round Up The Fare?</string>
    <string name="receipt.text_total_cost">Total Cost</string>
    <string name="receipt.text_card_detail">Card Detail</string>
    <string name="receipt.text_update_payment_detail">Update Payment Detail</string>
    <string name="receipt.button_text_ok">OK</string>
    <string name="receipt.value_pickup_location">Abc, Shopping point australia, \n3000</string>
    <string name="receipt.value_dropoff_location">moon complex, australia, \n3000</string>
    <string name="receipt.value_distance_time">20 Min</string>
    <string name="receipt.value_distance_km">15</string>
    <string name="receipt.value_driver_name">John</string>
    <string name="receipt.value_car_type">Honda Accord</string>
    <string name="receipt.value_total_cost">$19.60</string>
    <string name="receipt.value_cardholder_name">Alexandra Johns</string>
    <string name="receipt.value_card_no_first">xxxx</string>
    <string name="receipt.value_card_no_last">1234</string>
    <string name="fare_estimation">Fare estimation</string>
    <string name="track_driver">Track me</string>
    <string name="letsgo">Let\'s Go</string>
    <string name="receipt">your receipt</string>
    <string name="feedback">Feedback</string>
    <string name="write_your_review_about_driver">Write your review about driver</string>
    <string name="profile_updated_successfully">Profile updated successfully</string>
    <string name="ride_place_successfully">Ride placed successfully</string>
    <string name="APP_URL">https://play.google.com/store/apps/details?id=com.laoxi</string>
    <string name="share">Share</string>
    <string name="please_enter_email">Please enter email address</string>
    <string name="please_enter_valid_email">Please enter valid email address</string>
    <string name="please_enter_your_password">Please enter your password</string>
    <string name="please_enter_first_name">Please enter first name</string>
    <string name="please_enter_name">Please enter name</string>
    <string name="please_select_country_code">Please select country code</string>
    <string name="please_enter_phone_number">Please enter phone number</string>
    <string name="please_enter_valid_phone">Please enter valid phone number</string>
    <string name="password_should_be_minimum_6_characters">Password should be minimum 6 characters</string>
    <string name="you_have_successfully_registered_laoxi">You have successfully registered with laoxi.</string>
    <string name="you_register_card">You have successfully registered your card</string>
    <string name="alertdialog_errror_message_location_enable">Please enable location</string>
    <string name="LOGIN">users/login/</string>
    <string name="SIGNUP">users/signup</string>
    <string name="EDIT_PROFILE">users/edit</string>
    <string name="FORGOT_PASSWORD">users/forgotpassword</string>
    <string name="NEAR_FREE_DRIVER">driver/nearfreedrivers</string>
    <string name="GET_CARLIST">trip/getnearcartype</string>
    <string name="PLACE_ORDER">trip/placeorder</string>
    <string name="FIND_DRIVER">orders/find_driver</string>
    <string name="FARE_ESTIMATION">trip/fareestimation/</string>
    <string name="ORDER_STATUS">orders/order_status</string>
    <string name="PAST_ORDER">trip/past_trips</string>
    <string name="CANCEL_ORDER">trip/cancel_trip/</string>
    <string name="LOGOUT">users/logout/</string>
    <string name="GET_DRIVER_DETAILS">driver/drivers</string>
    <string name="GET_FARe_estimate">trip/fareestimation/</string>
    <string name="ONLINE_SUPPORT">trip/onlinesupport/</string>
    <string name="ADD_NEW_CARD">users/addcard</string>
    <string name="CONFIRM_TRIP">Are you sure you want to start a trip?</string>
    <string name="MAIN_URL_DISCLAIMER">http://www.xxx.com/disclaimer</string>
    <string name="FUTURE_ORDER">trip/upcoming_trips</string>
    <string name="RATE_AND_REVIEW">trip/rate_review</string>
    <string name="TRACK_RIDE">trip/track_trip</string>
    <string name="PAYMENT">trip/payment</string>
    <string name="UPDATE_DROPOFF">trip/updatedropoff</string>
    <string name="CHANGE_PASSWORD">users/changepassword/</string>
    <string name="DELETE_PAYMENT_CARD">users/deletecard</string>
    <string name="SEND_SMS">trip/send_sms</string>
    <string name="GET_ORDER_DETAILS">trip/get_order</string>
    <string name="VERIFY_OTP">users/otp_verify/</string>
    <string name="RESEND_OTP">users/resendotp/</string>
    <string name="ADD_FAVOURITE_DRIVER">users/add_favourite_driver</string>
    <string name="REMOVE_FAVOURITE_DRIVER">users/remove_favourite_driver</string>
    <string name="REDEEM_PROMO_CODE">users/redeem_promo_code</string>
    <string name="_01_26">01 / 26</string>
    <string name="validation_pick_address">Please provide pick up address</string>
    <string name="validation_dropoff_address">Please provide drop off address</string>
    <string name="signup_fragment_agree_terms_and_conditions"><![CDATA[Please agree to Terms & conditions]]></string>
    <string name="google_key_for_browser">AIzaSyC4dtAt7f6g7-oxTYp-s9ZwfTz3yrcPjY0</string>
    <string name="otp_layout.textview.text.dontreceive">Did Not Receive OTP? </string>
    <string name="otp_layout.textview.text.resendotp">RESEND OTP</string>
    <string name="DEFAULT_SELECTED_COUNTRY_PREFIX">+61</string>
    <string name="DEFAULT_SELECTED_COUNTRY">AU</string>
    <string name="first_time_guide">First time here? Just touch any car on the map to choose your car or driver</string>
    <string name="driver_not_response">Driver has not responded, please try again or select a different Driver</string>
    <string name="trip_cancelled">Trip cancelled successfully</string>
</resources>