<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linear_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center" android:layout_margin="@dimen/dp_5"
        android:background="@drawable/msg_box"
        android:gravity="center"
        android:orientation="vertical">




        <com.rider.customclasses.CustomEditText
            android:id="@+id/edtSmsBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/dp_5"
            android:background="@null"
            android:gravity="center"
            android:hint="Sms Body"
            android:inputType="text"
            android:maxLines="4"
            android:textColor="@color/text_color_blue"
            android:textColorHint="@color/new_text_color"
            android:textSize="@dimen/sp_14"
            app:fontName="@string/font_bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="@dimen/dp_10"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:background="@color/text_color_blue"></View>

        <LinearLayout
            android:layout_marginTop="@dimen/dp_10"
            android:layout_width="match_parent" android:gravity="center"
            android:layout_height="wrap_content" android:layout_gravity="center"
            android:orientation="horizontal"
            android:weightSum="3">

            <com.rider.customclasses.CustomButton
                android:id="@+id/btnOk"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_50"
                android:layout_margin="@dimen/dp_5"
                android:layout_weight="1"
                android:background="@drawable/rounded_corner_buttons_blue"
                android:text="@string/yes"
                android:textColor="@color/White"
                app:fontName="@string/font_bold" />


            <com.rider.customclasses.CustomButton
                android:id="@+id/btnCancel"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_50"
                android:layout_margin="@dimen/dp_5"
                android:layout_weight="1"
                android:background="@drawable/rounded_corner_buttons_yellow"
                android:text="@string/no"
                android:textColor="@color/White"
                app:fontName="@string/font_bold" />


        </LinearLayout>
    </LinearLayout>


</LinearLayout>
